syntax = "proto3";

package io.harness.product.ci.addon.proto;

option java_multiple_files = true;
option go_package = "ciaddonpb";

import "product/ci/addon/proto/progress.proto";

enum ErrorType {
  NO_ERROR = 0;
  NETWORK_ERROR = 1;
  AUTHENTICATION_ERROR = 2;
}

enum LocationType {
  UNKNOWN = 0;  // Default value of enum is 0
  // Artifactories
  S3 = 1;
  GCS = 2;
  JFROG = 3;
  // Registries
  GCR = 4;
  ECR = 5;
  DOCKERHUB = 6;
}

enum AuthType {
  BASIC_AUTH = 0;   // Assumes USERNAME_id and PASSWORD_id to be present
  SECRET_FILE = 1;  // Assumes SECRET_PATH_id to be present
  ACCESS_KEY = 2;   // Assumes ACCESS_KEY_id and/or SECRET_KEY_id to be present
}

message Error {
  ErrorType error = 1;
  string description = 2;
}

// Task global unique identifier
message TaskId {
  string id = 1;
}

// Details of connector
message Connector {
  string id = 1;
  AuthType auth = 2;
}

message BuildPublishImage {
  string docker_file = 1;
  string context = 2;
  Destination destination = 3;
}

message UploadFile {
  string file_pattern = 1;
  Destination destination = 2;  // location to copy the file
}

// Destination to upload to
message Destination {
  string destination_url = 1;
  Connector connector = 2;
  LocationType location_type = 3;
}

message PublishArtifactsRequest {
  TaskId task_id = 1;
  repeated UploadFile files = 2;
  repeated BuildPublishImage images = 3;
}

message PublishArtifactsResponse {
}

message TaskProgressRequest {
  TaskId task_id = 1;
}

message TaskProgressResponse {
  TaskStatus current_stage = 1;
  Error error = 2;
}

message TaskProgressUpdatesRequest {
  TaskId task_id = 1;
}

message TaskProgressUpdatesResponse {
  TaskStatus current_stage = 1;
  Error error = 2;
}

service CIAddon {
  // Asynchronous RPC to upload files as well as build docker images and publish them
  // It takes a list of files/file_patterns and uploads them to a destination location
  // It also takes a list of local Dockerfiles, builds them and upload to specified destination location
  // call RPC TaskProgress() or TaskProgressUpdates() with this task_id to get the status
  rpc PublishArtifacts(PublishArtifactsRequest) returns (PublishArtifactsResponse);

  // Synchronous RPC to get progress of a given task_id
  rpc TaskProgress(TaskProgressRequest) returns (TaskProgressResponse);

  // Streaming RPC to get periodic progress updates of a given task_id.
  rpc TaskProgressUpdates(TaskProgressUpdatesRequest) returns (stream TaskProgressUpdatesResponse);
}
